--- a/frontend/src/pages/adminPage/adminpage.scss
+++ b/frontend/src/pages/adminPage/adminpage.scss
@@ -68,6 +68,7 @@
                 }
 
                 &.rangeItem {
+    
                     display: flex;
                     flex-direction: column;
                     gap: 8px;
@@ -88,10 +89,10 @@
                     input[type='range'] {
                     position: absolute;
                     pointer-events: none;
-                    -webkit-appearance: none;
+                
                     width: 100%;
                     height: 6px;
-                    background: none;
+                    background: #0077b6 ;
                     outline: none;
                     }
 
@@ -100,7 +101,7 @@
                     width: 16px;
                     height: 16px;
                     border-radius: 50%;
-                    background-color: #0077b6;
+                    background-color: #0077b6 ;
                     cursor: pointer;
                     -webkit-appearance: none;
                     }
