--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -21,10 +21,18 @@
     justify-content: space-between;
 
     .logo{
+        width: 50px;
+        height: 50px;
         font-size: 2rem;
         font-weight: 700;
         color: #34d399;
         margin-left: 20px ;
+
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
         
     }
 
