--- a/frontend/src/components/sidebar/sidebar.scss
+++ b/frontend/src/components/sidebar/sidebar.scss
@@ -11,10 +11,20 @@
         align-items: center;
         justify-content: center;
 
-        .logo {
-            font-size: 30px;
-            font-weight: bold;
-            color: #14b8a6  ;
+        .logo{
+            width: 50px;
+            height: 50px;
+            font-size: 2rem;
+            font-weight: 700;
+            color: #34d399;
+           
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+            
         }
     }
 
